WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
300327
[github perf] Deduplicate invalidation selectors
https://bugs.webkit.org/show_bug.cgi?id=300327
Summary
[github perf] Deduplicate invalidation selectors
Antti Koivisto
Reported
2025-10-07 08:43:46 PDT
We may end up with multiple copes of the same selector in invalidation RuleSets.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-10-07 08:44:07 PDT
<
rdar://problem/162120232
>
Antti Koivisto
Comment 2
2025-10-07 09:12:46 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51948
EWS
Comment 3
2025-10-29 10:05:17 PDT
Committed
302297@main
(0fdbbfbe25ea): <
https://commits.webkit.org/302297@main
> Reviewed commits have been landed. Closing PR #51948 and removing active labels.
Brent Fulgham
Comment 4
2026-02-09 13:03:46 PST
Note: This change regressed Wikipedia's Dark Mode feature.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug