[github perf] Deduplicate invalidation selectors https://bugs.webkit.org/show_bug.cgi?id=300327 rdar://162120232

Reviewed by Alan Baradlay.

We may end up with multiple copies of the same selector in invalidation RuleSets if the
same selector is repeated in the stylesheets.

We also unnecessarily include pseudo-elements to these RuleSets as most pseudo-elements
invalidate their originating element.

* Source/WebCore/css/CSSSelector.cpp:
(WebCore::CSSSelector::RareData::equals const):
(WebCore::CSSSelector::simpleSelectorEqual const):
(WebCore::isElementBackedPseudoElement):
(WebCore::complexSelectorsEqual):

Add selector equality test functions. Allow testing equality while ignoring pseudo-elements.

* Source/WebCore/css/CSSSelector.h:
* Source/WebCore/css/CSSSelectorList.cpp:
(WebCore::CSSSelectorList::operator== const):
* Source/WebCore/css/CSSSelectorList.h:
* Source/WebCore/style/RuleFeature.cpp:
(WebCore::Style::RuleAndSelector::selector const):
(WebCore::Style::equalIgnoringPseudoElement):
(WebCore::Style::RuleFeatureSet::collectFeatures):

Try to deduplicate newly added RuleFeatures against the existing ones.

* Source/WebCore/style/RuleFeature.h:
* Source/WebCore/style/StyleScopeRuleSets.cpp:
(WebCore::Style::ensureInvalidationRuleSets):

Also deduplicate invalidation selectors.

Canonical link: https://commits.webkit.org/302297@main