Source/WebCore/css/CSSSelector.h
@@ -37,6 +37,7 @@ struct PossiblyQuotedIdentifier {
     AtomString identifier;
     bool wasQuoted { false };
 
+    bool operator==(const PossiblyQuotedIdentifier&) const = default;
     bool isNull() const { return identifier.isNull(); }
 };
 
@@ -189,6 +190,9 @@ WTF_ALLOW_UNSAFE_BUFFER_USAGE_END
     // Implicit means that this selector is not author/UA written.
     bool isImplicit() const { return m_isImplicit; }
 
+    // Relation and selector list bits are ignored.
+    bool simpleSelectorEqual(const CSSSelector&) const;
+
 #if !ASSERT_WITH_SECURITY_IMPLICATION_DISABLED
     bool destructorHasBeenCalled() const { return m_destructorHasBeenCalled; }
 #endif
@@ -244,6 +248,8 @@ private:
         static Ref<RareData> create(AtomString);
         WEBCORE_EXPORT ~RareData();
 
+        bool equals(const RareData&) const;
+
         bool matchNth(int count);
 
         // For quirks mode, class and id are case-insensitive. In the case where uppercase
@@ -277,6 +283,10 @@ private:
 
 bool complexSelectorCanMatchPseudoElement(const CSSSelector&);
 bool complexSelectorMatchesElementBackedPseudoElement(const CSSSelector&);
+
+// In the AllowNonElementBackedPseudoElements mode `.foo::before` and `.foo` compare equal.
+enum class ComplexSelectorsEqualMode : bool { Full, IgnoreNonElementBackedPseudoElements };
+bool complexSelectorsEqual(const CSSSelector&, const CSSSelector&, ComplexSelectorsEqualMode = ComplexSelectorsEqualMode::Full);
 
 inline bool operator==(const PossiblyQuotedIdentifier& a, const AtomString& b) { return a.identifier == b; }
 
@@ -325,6 +335,8 @@ inline bool isLogicalCombinationPseudoClass(CSSSelector::PseudoClass pseudoClass
         return false;
     }
 }
+
+bool isElementBackedPseudoElement(CSSSelector::PseudoElement);
 
 inline bool CSSSelector::isSiblingSelector() const
 {
