Source/WebCore/css/CSSSelectorList.cpp
@@ -257,4 +257,15 @@ bool CSSSelectorList::hasOnlyNestingSelector() const
     return singleSelector->match() == CSSSelector::Match::NestingParent;
 }
 
+bool CSSSelectorList::operator==(const CSSSelectorList& other) const
+{
+    for (auto a = begin(), b = other.begin(); a != end() || b != other.end(); ++a, ++b) {
+        if (a == end() || b == other.end())
+            return false;
+        if (!complexSelectorsEqual(*a, *b))
+            return false;
+    }
+    return true;
+}
+
 } // namespace WebCore
